/* $Id: ChangeLog,v 1.1776 2001-10-22 23:34:10 phaller Exp $ */

 2001-10-22: Patrick Haller <patrick.haller@innotek.de>
    - TESTAPP:  o added keyboard test program for low-level testing
                  of the keyboard routines 
                  (Queue, WH_KEYBOARD, WH_KEYBOARD_LL)
    - PMKBDHK:  o added initial version
    - USER32:   o enabled PMKBDHK
                o fixed minor issue in WH_KEYBOARD_LL
    - SHELL32:  o minor speedup in PIDL handling
    - KERNEL32: o removed experimental heap handle cache stats

 2001-10-21: Sander van Leeuwen <sandervl@xs4all.nl>
    - WSOCK32:  o Fix for sending FD_CLOSE notification when connection
                  is closed at the remote end.

 2001-10-20: Achim Hasenmueller <achimha@innotek.de>
    - WNASPI32: o do not fail in init routine in case ASPIROUT.SYS
                  is not present. Just return errors from all calls
                  if this is the case.
                  TODO: refine calls to not return any ASPI devices!

 2001-10-19: Achim Hasenmueller <achimha@innotek.de>
    - WSOCK32:  o implemented error bit handling in Winsock 2.0
                  event semaphore notification for asynch select

 2001-10-19: Patrick Haller <patrick.haller@innotek.de>
    - COMCTL32: o updated listview and status to wine level
    - COMDLG32: o fix crash in FileDlg95 (used freed memory object)

 2001-10-18: knut stange osmundsen <kosmunds@csc.com>
    - odin32.*.vac3*.mk:
                o Added /noignorecase to ILIBFLAGS. Object libraries
                  is now using case sensitive names. This removes some
                  warnings during custombuild and fixes a duplicate symbol
                  problem in kKrnlLibR3.

 2001-10-18: Achim Hasenmueller <achimha@innotek.de>
    - USER32:   o temporarily backed out a change from earlier today
                  in the color pointer conversion code that causes
                  severe regressions. Look for @@@AH in oslibres.cpp
